EL navbar mantiene la sesión en todas las views

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -176,6 +176,14 @@ aside {
     justify-content: space-between;
 } */
 
+.navbar-custom li {
+    min-width: 8rem;
+}
+.navbar-custom li a{
+    text-align: center;
+    width: 100%;
+}
+
 .sidebar li .icon {
     display: flex;
     justify-content: center;
