limpieza de código

--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav navbar-custom"> 
         <li class="nav-item">
-          <a class="nav-link active" href="/">Home
+          <a class="nav-link active" href="/">Inicio
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
