--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -19,14 +19,14 @@
             <a class="nav-link" href="/user/profile">Mi perfil</a>
           </li>
           <li class="nav-item ">
-              <a class="nav-link " href="#" >Cerrar Sesión</a>
+              <a class="nav-link " href="/auth/logout" >Cerrar Sesión</a>
             </li>
           {{else}}
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" href="/auth/login">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Register</a>
+              <a class="nav-link" href="/auth/register">Register</a>
             </li>
         {{/isEqual}}
         
