--- a/src/views/publicProfile.hbs
+++ b/src/views/publicProfile.hbs
@@ -1,8 +1,8 @@
 <div class="conainter">
-    <h2>Nombre y apellido</h2>
+    <h2>{{doctor.firstname}} {{doctor.lastname}}</h2>
     <div class="row">
         <div class="col">
-            Descripción
+            {{doctor.category}}
         </div>
         <div class="col">
             <figure>
