--- a/src/views/profile/user.hbs
+++ b/src/views/profile/user.hbs
@@ -13,9 +13,13 @@
             
             <h5 class="my-3">{{user.firstname}}</h5>
             <p class="text-muted mb-1">{{user.adress}}</p>
-            <p class="text-muted mb-4">Paciente</p>
+            <p class="text-muted mb-4">{{user._id}}</p>
             <div class="d-flex justify-content-center mb-2">
-              <a href="/user/profile/update/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
+              {{#if user.category}}
+                <a href="doctor/{{user._id}}" class="btn btn-primary">Editar Peddrfil</a>
+                {{else}}
+                <a href="/user/profile/update/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
+              {{/if}}
             </div>
           </div>
         </div>
