--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -2,7 +2,7 @@
     <div class="row">
         {{#each doctors}}
         <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src={{image}} class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">{{firstname}}</h5>
                 <p class="card-text">{{category}}</p>
