--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -17,7 +17,7 @@
         {{#if user.role}}
             {{#isEqual user.role 'DOCTOR_ROLE'}}
               <li class="nav-item">
-                <a class="nav-link" href="/profile">Mi perfil D</a>
+                <a class="nav-link" href="/profile">Mi perfil</a>
               </li>
               <li class="nav-item ">
                   <a class="nav-link " href="/auth/logout" >Cerrar Sesión</a>
