--- a/src/views/profile/user.hbs
+++ b/src/views/profile/user.hbs
@@ -16,7 +16,7 @@
             <p class="text-muted mb-4">{{user._id}}</p>
             <div class="d-flex justify-content-center mb-2">
               {{#if user.category}}
-                <a href="doctor/{{user._id}}" class="btn btn-primary">Editar Peddrfil</a>
+                <a href="doctor/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
                 {{else}}
                 <a href="/user/profile/update/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
               {{/if}}
