El usuario puede editar la consulta

--- a/src/views/doctor/profile.hbs
+++ b/src/views/doctor/profile.hbs
@@ -1,18 +1,14 @@
-<div class="conainter">
+<div class="containter">
     <h2>{{doctor.firstname}} {{doctor.lastname}}</h2>
     <div class="row">
         <div class="col">
             {{doctor.category}}
+            HOLAAAAAAAAAAAAAAAAAAAAAAAA
         </div>
         <div class="col">
             <figure>
                 <img src="" alt="">
             </figure>
         </div>
-    </div>
-    <div class="row">
-        <h3>Citas</h3>
-        <p>Selccionar cita</p>
-        {{>showAppointment}}
     </div>
 </div>
