--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -39,7 +39,7 @@
 /*****************************************************
                     REGISTER
 ******************************************************/
-form {
+.form-design {
     border: 1px solid rgb(225, 225, 225);
     padding: 3rem;
     box-shadow: var(--shadow-elevation-high);
