--- a/src/views/profile/user.hbs
+++ b/src/views/profile/user.hbs
@@ -1,4 +1,4 @@
-<section style="background-color: #f8f8f8;" class="container fade-in">
+<section style="background-color: #f8f8f8;" class="container mt-4 fade-in">
     <div class="row p-3">
       <div class="col-lg-4">
         <div class="card mb-4">
@@ -12,39 +12,21 @@
             {{/if}}
             
             <h5 class="my-3">{{user.firstname}}</h5>
-            <p class="text-muted mb-1">{{user.adress}}</p>
-            <p class="text-muted mb-4">{{user._id}}</p>
+            {{#if user.adress}}
+                <p class="text-muted mb-1"><i class="fa-solid fa-location-dot mx-1"></i> {{user.adress}}</p>  
+            {{/if}}
+            <p class="text-muted mb-4"> <i class="fa-solid fa-hospital-user mx-1"></i> Paciente</p>
             <div class="d-flex justify-content-center mb-2">
-              {{#if user.category}}
-                <a href="doctor/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
-                {{else}}
-                <a href="/user/profile/update/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
-              {{/if}}
+              <a href="/user/profile/update/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
             </div>
           </div>
         </div>
         <div class="card mb-4 mb-lg-0">
           <div class="card-body p-0">
             <ul class="list-group list-group-flush rounded-3">
-              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                <i class="fas fa-globe fa-lg text-warning"></i>
-                <p class="mb-0">https://mdbootstrap.com</p>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                <i class="fab fa-github fa-lg" style="color: #333333;"></i>
-                <p class="mb-0">mdbootstrap</p>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                <i class="fab fa-twitter fa-lg" style="color: #55acee;"></i>
-                <p class="mb-0">@mdbootstrap</p>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                <i class="fab fa-instagram fa-lg" style="color: #ac2bac;"></i>
-                <p class="mb-0">mdbootstrap</p>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                <i class="fab fa-facebook-f fa-lg" style="color: #3b5998;"></i>
-                <p class="mb-0">mdbootstrap</p>
+              <li class="list-group-item list-group-item-warning d-flex justify-content-between align-items-center p-3">
+                <i class="fas fa-calendar-check fa-lg text-warning"></i>
+                <p class="mb-0">Citas Médicas: {{appointmentTotal}}</p>
               </li>
             </ul>
           </div>
@@ -109,17 +91,37 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-12">
             <div class="card mb-4 mb-md-0">
               <div class="card-body">
-                {{>createAppointment}}
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="card mb-4 mb-md-0">
-              <div class="card-body">
-                {{>listAppointment}}
+                {{#if appointment}}
+                  {{#customEach appointment user}}
+                    <div class="col-md-6">
+                      <ul class="list-group">
+                      <li class="list-group-item">Fecha: {{date}} - Hora: {{appointmentTime}}</li>
+                      <li class="list-group-item list-group-item-success">Doctor: {{doctor.firstname}} {{doctor.lastname}} - Especialidad: {{doctor.category}}</li> 
+                      {{#if status}}         
+                        <li class="list-group-item list-group-item-info">Estado: Pendiente</li>
+                      {{/if}}
+                      <form action="/appointment/{{this._id}}?_method=PUT" 
+                            method="POST"
+                        >
+                        <input type="hidden" name="_method" value="PUT">
+                        <input type="hidden" value="{{variable._id}}" name="client">
+                        <button type="submit" class="btn btn-danger w-100 mt-2"><i class="fa-solid fa-trash"></i>  Eliminar Cita</button>
+                      </form>
+                    </ul>
+                    </div>
+                  {{/customEach}}
+                  {{else}}
+                    <div class="col-md-6">
+                      <li class="list-group-item list-group-item-primary d-flex justify-content-between align-items-center p-3">
+                      <i class="fas fa-exclamation fa-lg text-warning rounded-circle" style="background-color: #f8f8f8;"></i>
+                      <p class="mb-0">Todavia no tienes Citas Médicas agendadas.</p>
+                    </li>
+                    </div>
+                {{/if}}
+                
               </div>
             </div>
           </div>
