Actualizacion en schema de citas y controller de doctor

--- a/src/views/profile/user.hbs
+++ b/src/views/profile/user.hbs
@@ -108,6 +108,7 @@
                         >
                         <input type="hidden" name="_method" value="PUT">
                         <input type="hidden" value="{{variable._id}}" name="client">
+                        <input type="hidden" value="Pending" name="status">
                         <button type="submit" class="btn btn-danger w-100 mt-2"><i class="fa-solid fa-trash"></i>  Eliminar Cita</button>
                       </form>
                     </ul>
