--- a/src/views/doctor/public.hbs
+++ b/src/views/doctor/public.hbs
@@ -39,6 +39,7 @@
                                 <input type="hidden" name="_method" value="PUT">
                                 <input type="hidden" value="{{this.doctor._id}}" name="doctor">
                                 <input type="hidden" value="{{variable._id}}" name="client">
+                                <input type="hidden" value="Confirmed" name="status">
                                 <button type="submit" class="btn btn-primary mt-1">Seleccionar</button>
                             </form>
                         </div>
