--- a/src/views/profile/doctor.hbs
+++ b/src/views/profile/doctor.hbs
@@ -24,29 +24,10 @@
           </div>
         </div>
         <div class="card mb-4 mb-lg-0">
-          <div class="card-body p-0">
-            <ul class="list-group list-group-flush rounded-3">
-              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                <i class="fas fa-globe fa-lg text-warning"></i>
-                <p class="mb-0">https://mdbootstrap.com</p>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                <i class="fab fa-github fa-lg" style="color: #333333;"></i>
-                <p class="mb-0">mdbootstrap</p>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                <i class="fab fa-twitter fa-lg" style="color: #55acee;"></i>
-                <p class="mb-0">@mdbootstrap</p>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                <i class="fab fa-instagram fa-lg" style="color: #ac2bac;"></i>
-                <p class="mb-0">mdbootstrap</p>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                <i class="fab fa-facebook-f fa-lg" style="color: #3b5998;"></i>
-                <p class="mb-0">mdbootstrap</p>
-              </li>
-            </ul>
+          <div class="card-body p-3">
+            <div>
+              {{>createAppointment}}
+            </div>
           </div>
         </div>
       </div>
@@ -112,14 +93,35 @@
           <div class="col-md-6">
             <div class="card mb-4 mb-md-0">
               <div class="card-body">
-                {{>createAppointment}}
+
+                <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center p-3">
+                  <i class="fas fa-globe fa-lg text-warning"></i>
+                  <p class="mb-0">Citas confirmadas: {{confirmedTotal}}</p>
+                </li>
+                {{#each confirmed}}
+                  <div class="border mt-2">
+                      <li class="list-group-item list-group-item-info">Paciente: {{client.lastname}}, {{client.firstname}}</li>
+                      <li class="list-group-item">Fecha: {{date}} - {{appointmentTime}}</li>
+                  </div>
+                {{/each}}
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="card mb-4 mb-md-0">
               <div class="card-body">
-                {{>listAppointment}}
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center p-3 mb-2">
+                    <i class="fas fa-globe fa-lg text-warning"></i>
+                    <p class="mb-0">Citas pendientes: {{appointmentTotal}}</p>
+                  </li>
+                  {{#each appointment}}
+                  <div class="border mt-2">
+                      <li class="list-group-item list-group-item-warning">Paciente: {{client.lastname}}, {{client.firstname}}</li>
+                      <li class="list-group-item">Fecha: {{date}} - {{appointmentTime}}</li>
+                  </div>
+                  {{/each}}
+                </ul>
               </div>
             </div>
           </div>
