--- a/src/views/profile/doctor.hbs
+++ b/src/views/profile/doctor.hbs
@@ -93,17 +93,17 @@
           <div class="col-md-6">
             <div class="card mb-4 mb-md-0">
               <div class="card-body">
-
-                <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center p-3">
-                  <i class="fas fa-globe fa-lg text-warning"></i>
-                  <p class="mb-0">Citas confirmadas: {{confirmedTotal}}</p>
-                </li>
-                {{#each confirmed}}
-                  <div class="border mt-2">
-                      <li class="list-group-item list-group-item-info">Paciente: {{client.lastname}}, {{client.firstname}}</li>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-secondary d-flex align-items-center p-3 mb-2">
+                    <i class="fas fa-globe fa-lg text-warning"></i>
+                    <p class="mb-0 px-2">Citas pendientes: {{appointmentTotal}}</p>
+                  </li>
+                  {{#each appointment}}
+                  <div class="">
                       <li class="list-group-item">Fecha: {{date}} - {{appointmentTime}}</li>
                   </div>
-                {{/each}}
+                  {{/each}}
+                </ul>
               </div>
             </div>
           </div>
@@ -111,13 +111,13 @@
             <div class="card mb-4 mb-md-0">
               <div class="card-body">
                 <ul class="list-group">
-                  <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center p-3 mb-2">
-                    <i class="fas fa-globe fa-lg text-warning"></i>
-                    <p class="mb-0">Citas pendientes: {{appointmentTotal}}</p>
+                  <li class="list-group-item list-group-item-secondary d-flex justify-content-start align-items-center p-3 mb-2">
+                    <i class="fas fa-calendar-check fa-lg text-warning"></i>
+                    <p class="mb-0 px-2">Citas confirmadas: {{confirmedTotal}}</p>
                   </li>
-                  {{#each appointment}}
+                  {{#each confirmed}}
                   <div class="border mt-2">
-                      <li class="list-group-item list-group-item-warning">Paciente: {{client.lastname}}, {{client.firstname}}</li>
+                      <li class="list-group-item list-group-item-info">Paciente: {{client.lastname}}, {{client.firstname}}</li>
                       <li class="list-group-item">Fecha: {{date}} - {{appointmentTime}}</li>
                   </div>
                   {{/each}}
