--- a/src/views/profile/user.hbs
+++ b/src/views/profile/user.hbs
@@ -91,9 +91,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 w-100">
             <div class="card mb-4 mb-md-0">
               <div class="card-body">
+                <div class="row">
                 {{#if appointment}}
                   {{#customEach appointment user}}
                     <div class="col-md-6">
@@ -122,7 +123,7 @@
                     </li>
                     </div>
                 {{/if}}
-                
+                </div>
               </div>
             </div>
           </div>
