--- a/src/views/doctor/public.hbs
+++ b/src/views/doctor/public.hbs
@@ -1,28 +1,36 @@
 <div class="row">
-    <div class="col-6">
-            <div class="row">
-            <h2>{{doctor.firstname}} {{doctor.lastname}}</h2>
-            <hr>
-                <div class="col-6">
+    <div class="col-md-6 border h-100 mt-3">
+        <div class="row">
+            <h2 class="pt-2">{{doctor.firstname}} {{doctor.lastname}}</h2>
+            <hr>      
+                <div class="col-md-6">
+                    <figure>
+                        {{#if doctor.image}}
+                        <img src={{doctor.image}} alt="Foto de perfil del doctor {{doctor.lastname}}"
+                            class="rounded-circle img-profile">
+                        {{else}}
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+                            class="rounded-circle img-profile">
+                         {{/if}}
+                    </figure>
+                </div>
+                <div class="col-md-6">
                     {{doctor.category}}
                     HOLAAAAAAAAAAAAAAAAAAAAAAAA
                     {{user.email}}
                     {{user._id}}
                 </div>
-                <div class="col-6">
-                    <figure>
-                        <img src="{{doctor.image}}" alt="Imagen del Doctor {{doctor.lastname}}" class="rounded-circle img-profile">
-                    </figure>
-                </div>
-            </div>
+        </div>
+        <div class="row">
+            <h5 class="border p-2" style="background-color: #2c3e50; text-align: center; color: white;">Citas totales: <span style="font-weight: bold;">{{appointmentsTotal}}</span></h5>
+        </div>
     </div>
-    <div class="col-6">
-
-        {{#customEach appointments user}}
-        <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Cita médica</h5>
-                        <div class="row p-2">
+    <div class="col-md-6">
+        <div class="row">
+            {{#customEach appointments user}}
+            <div class="card m-3" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Cita médica</h5>
                         <div class="form-group col-12">
                             {{!-- FECHA --}}
                             <div class="mb-1">
@@ -40,11 +48,12 @@
                                 <input type="hidden" value="{{this.doctor._id}}" name="doctor">
                                 <input type="hidden" value="{{variable._id}}" name="client">
                                 <input type="hidden" value="Confirmed" name="status">
-                                <button type="submit" class="btn btn-primary mt-1">Seleccionar</button>
+                                <button type="submit" class="btn btn-warning mt-1 w-100">Seleccionar</button>
                             </form>
-                        </div>
+                        </div>   
+                </div>
+            </div>
+            {{/customEach}}
         </div>
-        </div>
-        {{/customEach}}
     </div>
 </div>
