--- a/src/views/profile/doctor.hbs
+++ b/src/views/profile/doctor.hbs
@@ -15,11 +15,7 @@
             <p class="text-muted mb-1">{{user.adress}}</p>
             <p class="text-muted mb-4">{{user._id}}</p>
             <div class="d-flex justify-content-center mb-2">
-              {{#if user.category}}
-                <a href="doctor/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
-                {{else}}
-                <a href="/user/profile/update/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
-              {{/if}}
+                <a href="/doctor/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
             </div>
           </div>
         </div>
