--- a/src/views/partials/hero.hbs
+++ b/src/views/partials/hero.hbs
@@ -1,1 +1,6 @@
-<h2>ESTO ES UN HERO CON IMAGEN</h2>
+<div class="hero-image">
+  <div class="hero-text">
+    <h1>Clínica del Sol</h1>
+    <p>Atención Médica Profesional y Cuidado Personalizado</p>
+  </div>
+</div>
