--- a/src/views/doctor/listDoctors.hbs
+++ b/src/views/doctor/listDoctors.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="d-flex justify-content-between p-3">
-        <h2>Tabla de Doctóres</h2>
+        <h2>Lista de médicos</h2>
         <a href="doctor/create" class="btn btn-primary d-flex justify-content-center align-items-center h-100" role="button">
           <span><i class="fa-solid fa-user-plus pe-2"></i></span>
           Crear
@@ -14,7 +14,7 @@
               <th>Apellido(s)</th>
               <th>Email</th>
               <th>Teléfono</th>
-              <th>Precio Consulta</th>
+              <th>Celular</th>
               <th>Categoría</th>
               <th>Estado</th>
               <th>Acciones</th>
@@ -28,7 +28,7 @@
                 <td>{{lastname}}</td>
                 <td>{{email}}</td>
                 <td>{{phoneNumber}}</td>
-                <td>{{consultationPrice}}</td>
+                <td>{{cellphone}}</td>
                 <td>{{category}}</td>
                 <td>{{active}}</td>
                 <td>
