--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -14,30 +14,26 @@
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
-        {{#if user.role}}
-            {{#isEqual user.role 'DOCTOR_ROLE'}}
-              <li class="nav-item">
-                <a class="nav-link" href="/doctor/profile">Mi perfil</a>
-              </li>
-              <li class="nav-item ">
-                  <a class="nav-link " href="/auth/logout" >Cerrar Sesión</a>
-                </li>
-              {{else}}
-              <li class="nav-item">
-                <a class="nav-link" href="/profile">Mi perfil</a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link " href="/auth/logout" >Cerrar Sesión</a>
-              </li>
-            {{/isEqual}}
-            {{else}}
-            <li class="nav-item">
-              <a class="nav-link" href="/auth/login">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/auth/register">Register</a>
-            </li>
-        {{/if}}
+        {{#isEqual user.role 'DOCTOR_ROLE'}}
+          <li class="nav-item">
+            <a class="nav-link" href="/doctor/profile">Mi perfil</a>
+          </li>
+          
+        {{/isEqual}}
+        
+        {{#isEqual user.role 'USER_ROLE'}}
+          <li class="nav-item">
+            <a class="nav-link" href="/doctor/profile">Mi perfil</a>
+          </li>
+        {{/isEqual}}
+        {{#isEqual user.role 'ADMIN_ROLE'}}
+          <li class="nav-item">
+            <a class="nav-link" href="/admin">Administración</a>
+          </li>
+        {{/isEqual}}
+          <li class="nav-item ">
+            <a class="nav-link " href="/auth/logout" >Cerrar Sesión</a>
+          </li>
             
         {{!-- {{#isEqual user.role 'USER_ROLE'}}
           <li class="nav-item">
