--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -50,8 +50,8 @@
       <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
 
       
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="/js/bootstrap.bundle.min.js"></script>
-      <script src="/js/dataTable.js"></script>
-      <script src="/js/validation.js"></script>
+      <script type="module" src="/js/validation.js"></script>
 </body>
 </html>
