Estructura de carpeta admin, modificación de navbar

--- a/src/views/admin/dashboard.hbs
+++ b/src/views/admin/dashboard.hbs
@@ -1,50 +1,4 @@
 <div class="admin-container d-flex">
-
-  <aside>
-        <h3>Clínica Digitalers</h3>
-        <p>Administración</p>
-        <hr />
-
-        <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar">
-            <div class="position-sticky">
-                <ul class="nav flex-column ms-4">
-                    <li class="nav-item btn-aside">
-                        <a class="nav-link active d-flex" href="#">
-                          <i class="fa-solid fa-house icon"></i>
-                          <p class="text">Dashboard</p>
-                        </a>
-                    </li>
-                    <li class="nav-item btn-aside">
-                        <a class="nav-link active d-flex" href="#">
-                          <i class="fa-solid fa-user-doctor icon"></i>
-                          <p class="text">Médicos</p>
-                        </a>
-                    </li>
-                    <li class="nav-item btn-aside">
-                        <a class="nav-link active d-flex" href="#">
-                          <i class="fa-solid fa-hospital-user icon"></i>
-                          <p class="text">Pacientes</p>
-                        </a>
-                    </li>
-                    <li class="nav-item btn-aside">
-                        <a class="nav-link active d-flex" href="#">
-                          <i class="fa-solid fa-laptop-medical icon"></i>
-                          <p class="text">Consultas</p>
-                        </a>
-                    </li>
-                    <li class="nav-item btn-aside">
-                        <a class="nav-link active d-flex" href="#">
-                           <i class="fa-solid fa-book-medical icon"></i>
-                          <p class="text">Expedientes</p>
-                        </a>
-                    </li>
-                    
-                </ul>
-            </div>
-        </nav>
-    </aside>
-
-    <!-- Container for Bootstrap Cards -->
     <div class="container mt-5">
         <div class="row">
             <!-- Card 1 -->
@@ -77,7 +31,7 @@
                         </div>
                      </div>
                     <div>
-                      <a href="#" class="btn btn-card-dashboard w-100 mt-2">Ver más</a>
+                      <a href="/user" class="btn btn-card-dashboard w-100 mt-2">Ver más</a>
                     </div>
                   </div>
                 </div>
