--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav navbar-custom"> 
         <li class="nav-item">
-          <a class="nav-link active" href="/">Inicio
+          <a class="nav-link" href="/">Inicio
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
@@ -27,8 +27,16 @@
         {{/isEqual}}
 
         {{#isEqual user.role 'ADMIN_ROLE'}}
-          <li class="nav-item">
-            <a class="nav-link" href="/admin">Administración</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Administración
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="/admin">Inicio</a></li>
+              <li><a class="dropdown-item" href="/doctor">Doctores</a></li>
+              <li><a class="dropdown-item" href="/user">Usuarios</a></li>
+              <li><a class="dropdown-item" href="#">citas</a></li>
+            </ul>
           </li>
         {{/isEqual}}
 
