El administrador puede editar y crear usuarios

--- a/src/views/admin/user.hbs
+++ b/src/views/admin/user.hbs
@@ -49,7 +49,7 @@
           <td>{{adress}}</td>
           <td>{{active}}</td>
           <td>
-            <a href="/doctor/{{_id}}"  data-edit="edit"  class="btn btn-success read-button" >Editar</a>
+            <a href="/user/profile/update/{{_id}}"  data-edit="edit"  class="btn btn-success read-button" >Editar</a>
             <button data-id="{{_id}}" class="btn btn-danger delete-btn" id="delete">Eliminar</button>
           </td>
         </tr>
