--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -22,7 +22,7 @@
         
         {{#isEqual user.role 'USER_ROLE'}}
           <li class="nav-item">
-            <a class="nav-link" href="/doctor/profile">Mi perfil</a>
+            <a class="nav-link" href="/profile">Mi perfil</a>
           </li>
         {{/isEqual}}
 
@@ -35,7 +35,7 @@
               <li><a class="dropdown-item" href="/admin">Inicio</a></li>
               <li><a class="dropdown-item" href="/doctor">Doctores</a></li>
               <li><a class="dropdown-item" href="/user">Usuarios</a></li>
-              <li><a class="dropdown-item" href="#">citas</a></li>
+              <li><a class="dropdown-item" href="/appointment">Citas</a></li>
             </ul>
           </li>
         {{/isEqual}}
