--- a/src/views/partials/imageForm.hbs
+++ b/src/views/partials/imageForm.hbs
@@ -25,6 +25,7 @@
             <div class="invalid-feedback">
             Selecciona una imagen.
             </div>
+            <input type="hidden" name="id" value="{{data._id}}">
         </div>
         </fieldset>
     </div>
