--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,18 +1,25 @@
 <div class="container">
+    <h2 class="mt-4">Listado de doctores</h2>
+    <hr>
     <div class="row">
         {{#each doctors}}
-        <div class="card m-3" style="width: 18rem;">
+        <div class="card m-3" style="width: 18rem; padding: 0;">
             {{#if image}}
-              <img src={{image}} class="card-img-top" alt="Imagen de perfil de {{lastname}}" style="height: 10rem;">
+              <img src={{image}} class="card-img-top" alt="Imagen de perfil de {{lastname}}" style="height: 15rem; width: 100%; object-fit: cover;">
             {{else}}
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" class="card-img-top" alt="Imagen de perfil de {{lastname}}" style="height: 10rem; object-fit: cover;">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" class="card-img-top" alt="Imagen de perfil de {{lastname}}" style="height: 15rem; object-fit: cover;">
             {{/if}}
             <div class="card-body">
-                <h5 class="card-title">{{firstname}}</h5>
+                <h5 class="card-title">{{firstname}} {{lastname}}</h5>
                 <p class="card-text">{{category}}</p>
                 <a href="doctor/public/{{_id}}" class="btn btn-primary w-100">Ver Perfil</a>
             </div>
         </div>
     {{/each}}
     </div>
+    {{#isEqual total 0}}
+    <div class="alert alert-info mt-4" role="alert">
+        No se encontro ningún doctor.
+    </div>
+    {{/isEqual}}
 </div>
